--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "webpack-jetpack",
   "version": "1.0.0",
   "description": "An Electron application for creating Webpack configurations.",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "test": "npm run test"
+    "test": "npm run test",
+    "start": "electron ."
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/scottdj92/webpack-jetpack/issues"
   },
-  "homepage": "https://github.com/scottdj92/webpack-jetpack#readme"
+  "homepage": "https://github.com/scottdj92/webpack-jetpack#readme",
+  "devDependencies": {
+    "electron": "^1.3.3",
+    "electron-packager": "^7.6.0"
+  }
 }
